# Lanforge-mcp-tool

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  live-audit.jsonl  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  developer-guide.md  field-notes.md  security.md  tools.md  troubleshooting.md  user-guide.md
examples/: config.yaml  conversations.md  workflow_l3_soak.yaml
src/lanforge_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_setup.py  models.py  safety.py
src/lanforge_mcp/api/: __init__.py  catalog.py  json_api.py
src/lanforge_mcp/cliwrap/: __init__.py  executor.py
src/lanforge_mcp/connection/: __init__.py  http_client.py  manager.py  ssh_client.py
src/lanforge_mcp/data/: commands.json  endpoints.json
src/lanforge_mcp/diagnostics/: __init__.py  analyzer.py
src/lanforge_mcp/reports/: __init__.py  engine.py
src/lanforge_mcp/scripts/: __init__.py  discovery.py  runner.py
src/lanforge_mcp/server/: __init__.py  app.py  context.py
src/lanforge_mcp/server/tools/: __init__.py  attenuator_tools.py  command_tools.py  connection_tools.py  diagnostic_tools.py  inventory_tools.py  monitor_tools.py  report_tools.py  script_tools.py  station_tools.py  traffic_tools.py  workflow_tools.py
src/lanforge_mcp/workflow/: __init__.py  engine.py  templates.py
tests/: conftest.py  mock_lanforge.py  test_catalog.py  test_config.py  test_json_api.py  test_reports.py  test_scripts_discovery.py  test_tools.py  test_workflow.py
tools/: generate_catalog.py  generate_tool_docs.py
