[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lanforge-mcp"
version = "0.1.1"
description = "Production-grade MCP server exposing the complete power of Candela LANforge to any MCP-compatible AI model"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "lanforge-mcp contributors" }]
keywords = ["lanforge", "mcp", "model-context-protocol", "candela", "wifi", "network-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
    "paramiko>=3.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-paramiko",
    "types-PyYAML",
]

[project.scripts]
lanforge-mcp = "lanforge_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/lanforge-mcp/lanforge-mcp"
Documentation = "https://github.com/lanforge-mcp/lanforge-mcp/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/lanforge_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/lanforge_mcp/data" = "lanforge_mcp/data"

[tool.ruff]
line-length = 140
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
# Tool parameter descriptions are deliberately verbose one-liners for the LLM.
"src/lanforge_mcp/server/tools/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
